...
@Preview(showBackground = true)
@Composable
fun PreviewUserDetailScreen() {
    val mockUserDetailJson =
        """
{
  "login": "defunkt",
  "id": 2,
  "avatar_url": "https://avatars.githubusercontent.com/u/2?v=4",
  "html_url": "https://github.com/defunkt",
  "followers": 22385,
  "following": 215,
  "blog": "http://chriswanstrath.com/",
...
