...
            verticalArrangement = Arrangement.spacedBy(12.dp)
        ) {
            OutlinedTextField(
                modifier = Modifier
                    .fillMaxWidth()
                    .onFocusChanged { onSearchFocusChanged(it.isFocused) }
                    .semantics { contentDescription = "search_field" },
                value = query,
                onValueChange = {
                    query = it
                    onQueryChanged(it)
                },
                label = { Text(text = searchLabel) },
                singleLine = true,
                keyboardOptions = KeyboardOptions(imeAction = ImeAction.Search),
                keyboardActions = KeyboardActions(onSearch = { onSearch(query) }),
                trailingIcon = {
                    IconButton(onClick = { onSearch(query) }) {
                        Icon(Icons.Filled.Search, contentDescription = "Submit search")
                    }
                }
            )

            if (state.isSearching) {
                LinearProgressIndicator(
...
