<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="feature_users_cd_back">Navigate back</string>
    <string name="feature_users_repositories">Repositories</string>
    <string name="feature_users_no_repositories_found">No repositories found</string>
    <string name="feature_users_retry">Retry</string>
</resources>
